--- a/templates/template_viewer.html
+++ b/templates/template_viewer.html
@@ -42,12 +42,9 @@
     
     <body id="body">
         <div id="content"/>
-        
-        <script type="text/javascript" src="resources/js/mirador/mirador.js"/>
-        
-        
+
+        <script type="text/javascript" src="resources/js/mirador-2.7.0/mirador.min.js"/>
         <script type="text/javascript" src="//code.jquery.com/ui/1.11.3/jquery-ui.min.js"/>
-        
         <script type="text/javascript">
 
         /**
@@ -84,6 +81,9 @@
                 return 'en'
         };
 
+        /**
+         * JavaScript Set url of "download zip" button
+         */
         function setZipUrl() {
             document.getElementById('downloadImages').href = "https://c104-131.cloud.gwdg.de/sal-facs/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
 //          $('#viewer')[0].getElementById('downloadImages').href = "http://facs.salamanca.school/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
@@ -94,6 +94,7 @@
 
         $(document).ready(function(){
             var $wid = getUrlParams( 'wid' );
+            console.log("Run Mirador definition...");
             MyObjects.myMirador = Mirador({
                 id :        "viewer",
                 buildPath : "resources/js/mirador/",
@@ -125,17 +126,6 @@
                                 "href": "#no-op"
                             }
                         }
-// we could close the popup window from here, and eliminate its titlebar, thus saving space. But then we have nothing to grab for dragging the window around...
-// ,
-//                      {
-//                          "label": "Close",
-//                          "iconClass": "fa fa-window-close",
-//                          "attributes": {
-//                              "id": "close",
-//                              "aria-hidden": "true",
-//                              "href": "#no-op"
-//                          }
-//                      }
                     ]
                 },
                 showAddFromURLBox : false,
@@ -145,11 +135,12 @@
                 windowObjects : <span data-template="iiif:MiradorWindowObject">[{"bla": "bleh"}]</span>
             });
 
-            setTimeout( setZipUrl, 100 );
-// TODO: Binding to events happens in the parent html file (which includes the present file in an iframe).
-// We wait for mirador's full initialization here before calling the binding function.
-// Probably this can happen in more elegant, i.e. event-driven way.
-            setTimeout( window.parent.miradorLoaded, 4000 );
+// Binding to events happens in the parent html file (which includes the present file in an iframe).
+            MyObjects.myMirador.eventEmitter.subscribe('windowAdded', function(){
+                    // console.log("Dispatch mirador.loaded event...");
+                    window.parent.postMessage({ type:'mirador.loaded' },"*");
+                    setTimeout( setZipUrl, 100 );
+                });
         });
     </script>
         
