--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -4,15 +4,15 @@
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"/> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="author" content=""/>
-        <meta name="description" data-template="config:meta-description" content=""/>
-        <title data-template="config:meta-title"/>
-        <link rel="canonical" data-template="config:canonical-url"/>
-        <link rel="alternate" data-template="config:hreflang-url"/>
-        <link rel="alternate" data-template="config:rdf-url"/>
-        <link rel="alternate" data-template="config:iiif-url"/>
-        <link rel="first" data-template="config:firstLink"/>
-        <link rel="prev" data-template="config:prevLink"/>
-        <link rel="next" data-template="config:nextLink"/>
+        <meta name="description" data-template="gui:metaDescription" content=""/>
+        <title data-template="gui:metaTitle"/>
+        <link rel="canonical" data-template="gui:canonicalUrl"/>
+        <link rel="alternate" data-template="gui:hreflangUrl"/>
+        <link rel="alternate" data-template="gui:rdfUrl"/>
+        <link rel="alternate" data-template="gui:iiifUrl"/>
+        <link rel="first" data-template="gui:firstLink"/>
+        <link rel="prev" data-template="gui:prevLink"/>
+        <link rel="next" data-template="gui:nextLink"/>
 
         <!-- ==== CSS  ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -55,8 +55,8 @@
         <div class="navbar navbar-default navbar-fixed-top" role="navigation">
             <!-- top row with navigation buttons -->
             <div class="container">
-                <a data-template="config:logo"/> <!-- SvSal-claim, Toggle Boxes, extended menu) -->
-                <div data-template="config:app-header"/> <!-- General Menu (Works, Dictionary, Proj. description etc.) -->
+                <a data-template="gui:logo"/> <!-- SvSal-claim, Toggle Boxes, extended menu) -->
+                <div data-template="gui:header"/> <!-- General Menu (Works, Dictionary, Proj. description etc.) -->
             </div>
         </div>
         <!-- Work-UI (Toggle Boxes, extended menu) -->
