--- a/templates/template_guidelines.html
+++ b/templates/template_guidelines.html
@@ -4,10 +4,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="author" content=""/>
-        <meta name="description" data-template="config:meta-description" content=""/>
-        <title data-template="config:meta-title"/>
-        <link rel="canonical" data-template="config:canonical-url"/>
-        <link rel="alternative" data-template="config:hreflang-url"/>
+        <meta name="description" data-template="gui:metaDescription" content=""/>
+        <title data-template="gui:metaTitle"/>
+        <link rel="canonical" data-template="gui:canonicalUrl"/>
+        <link rel="alternative" data-template="gui:hreflangUrl"/>
         
         <!-- ==== CSS ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -42,8 +42,8 @@
         <div id="wrap">
             <div class="navbar navbar-default navbar-fixed-top" role="navigation">
                 <div class="container">
-                    <a data-template="config:logo"/>
-                    <div data-template="config:app-header"/>
+                    <a data-template="gui:logo"/>
+                    <div data-template="gui:header"/>
                 </div>
             </div>
             <div id="content" class="container-fluid"/>
@@ -116,7 +116,7 @@
         <h2/>
         <div id="footer">
             <div class="container">
-                <div data-template="config:footer"/>
+                <div data-template="gui:footer"/>
             </div>
         </div>
         
