Hide authors' professions

--- a/templates/template_authors.html
+++ b/templates/template_authors.html
@@ -79,8 +79,8 @@
                                     '&lt;/br&gt;' +
                                     '&lt;span &gt;&lt;% if (obj.orders)     {  %&gt; &lt;%= obj.orders %&gt;&lt;% } %&gt;&lt;/span&gt;' +
                                     '&lt;/br&gt;' +
-                                    '&lt;span&gt;&lt;% if (obj.disciplines) {  %&gt; &lt;%= obj.disciplines %&gt;&lt;% } %&gt;&lt;/span&gt;' +
-                                    '&lt;/br&gt;' +
+                                    //'&lt;span&gt;&lt;% if (obj.disciplines) {  %&gt; &lt;%= obj.disciplines %&gt;&lt;% } %&gt;&lt;/span&gt;' +
+                                    //'&lt;/br&gt;' +
 /*                                     '&lt;button class="btn btn-default dropdown-toggle pull-right" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true"&gt; Wirkorte ' + 
                                     '&lt;span class="caret"&gt;&lt;/span&gt;' + 
                                     '&lt;/button&gt;' +
