--- a/templates/template_viewer.html
+++ b/templates/template_viewer.html
@@ -1,4 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="i18n:translate" data-template-catalogues="data/i18n">
+<!DOCTYPE html >
+<html data-template="i18n:translate" data-template-catalogues="data/i18n">
     <head>
         <title>SvSal Mirador Instance</title>
         <link rel="stylesheet" type="text/css" href="resources/css/mirador-combined.css"/>
@@ -41,11 +42,11 @@
     </head>
     
     <body id="body">
-        <div id="content"/>
+        <div id="content"></div>
 
-        <script type="text/javascript" src="resources/js/mirador-2.7.0/mirador.min.js"/>
-        <script type="text/javascript" src="//code.jquery.com/ui/1.11.3/jquery-ui.min.js"/>
-        <script type="text/javascript">
+        <script src="resources/js/mirador/mirador.min.js"></script>
+        <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+        <script>
 
         /**
          * JavaScript Get URL Parameter
@@ -108,7 +109,7 @@
                     "fullScreenViewer": true,
                     "userButtons": [
                         {
-                            "label": '<i18n:text key="download"/>',
+                            "label": "download",
                             "iconClass": "fa fa-download",
                             "attributes": {
                                 "id": "downloadImages",
