Cleanup and renames.

--- a/templates/template_viewer_standalone.html
+++ b/templates/template_viewer_standalone.html
@@ -121,7 +121,7 @@
                             "attributes": {
                                 "id": "works",
                                 "aria-hidden": "true",
-                                "href": "workDetails.html?wid=" + $wid
+                                "href": "workdetails.html?wid=" + $wid
                             }
                         },
                         {
