--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -137,7 +137,7 @@
                                         '&lt;/p&gt;' +
                               		    '&lt;a title="&lt;%=obj.facsAttrib %&gt;" class="workImages pull-right" target="_blank" rel="noopener noreferrer" href="&lt;%= obj.workImages %&gt;"&gt;&lt;i class="fas fa-book-open" &gt;&lt;/i&gt; &lt;%=obj.facsAttrib %&gt;&lt;/a&gt;' +
                                         '&lt;br/&gt;' +
-                                        '&lt;a title="&lt;%=obj.titAttrib %&gt;" class="workDetails pull-right" href="&lt;%= obj.workDetails %&gt;"&gt;&lt;i class="fas fa-file-alt" &gt;&lt;/i&gt; &lt;%=obj.titAttrib %&gt;&lt;/a&gt;' +
+                                        '&lt;a title="&lt;%=obj.titAttrib %&gt;" class="workDetails pull-right" href="&lt;%= obj.workdetails %&gt;"&gt;&lt;i class="fas fa-file-alt" &gt;&lt;/i&gt; &lt;%=obj.titAttrib %&gt;&lt;/a&gt;' +
                               		    '&lt;a style="display: none;"  &gt;&lt;%= obj.sortName %&gt;&lt;/a&gt;' +
                                     '&lt;/div&gt;' +
                                 '&lt;/div&gt;' + 
